# mediaclient

./: CMakeLists.txt  config.client  gridconfig.client  mediaclinet.cpp
py/: Client.py  config - 副本.client  config.client  stream.ice
